--- a/style.css
+++ b/style.css
@@ -166,14 +166,95 @@ li a{
     float: right;
 }
 
-@media screen and (max-width: 800px)  {
+@media screen and (max-width: 300px)  {
     .hero{
         height: 100vh;
         /* background-image: var(--bg-image-desktop); */
+        background-color: #F2F0F1;
         background-position: center;
         background-repeat: no-repeat    ;
         background-size: cover;
         transition: 400ms;
+        display: grid;
+        grid-template-columns: 2fr ;
+        grid-template-rows: 2fr 0.5fr 0.5fr 1fr, 2fr;
+        grid-template-areas: 
+        "heroquote "
+        "heroP "
+        "herobutton "
+        "herothingy "
+        "heroimage"
+    
+        
+        ;
+    
+        
+    
+    
+    }
+    .heroquote{
+        grid-area: heroquote;
+       
+        /* background-color: gold; */
+        /* height: ; */
+        padding-top: 3em;
+        padding-left: 1em ;
+        font-size: 2.5rem;
+    
+    }
+    .heroimage{
+        grid-area: heroimage;
+        /* background-color: blue; */
+        /* height: 100vh; */
+        
+        
+    }
+    .heroimage img{
+        height: 35rem;
+        position: absolute;
+        bottom: 0;
+    
+    }
+    .heroP{
+        grid-area: heroP;
+        font-size: 10px;
+        color: #757575;
+        /* background-color: salmon; */
+        /* padding-top: 18em; */
+        padding-left: 4em ;
+        
+    }
+    .herobutton{
+        grid-area: herobutton;
+        /* background-color: yellow; */
+        padding-left: 2.5em;
+        
+    }
+    .herobutton button{
+        color: #fff;
+        padding: 15px 50px;
+        border-radius: 30px;
+        background-color: black;
+    }
+    .herothingy{
+        grid-area: herothingy;
+        /* background-color: aquamarine; */
+        display: grid;
+        grid: 2fr / auto auto auto;
+        
+    
+        
+    }
+    .herothingy .stats{
+        /* background-color: firebrick; */
+        /* border-right-style: solid ; */
+        border-left-style: solid;
+        border-color: black;
+        font-size: 10px;
+       
+        padding: 20px; 
+        margin: 20px;
+        float: right;
     }
     
 }
@@ -977,6 +1058,9 @@ position: absolute;
 
 
 
+}
+@media (min-width: 300px) {
+    
 }
 
 
