--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ li a{
         transition: 400ms;
         display: grid;
         grid-template-columns: 2fr ;
-        grid-template-rows: 2fr 0.5fr 0.5fr 1fr, 2fr;
+        grid-template-rows: 0.5fr 0.5fr 0.5fr 1fr, 2fr;
         grid-template-areas: 
         "heroquote "
         "heroP "
@@ -197,9 +197,9 @@ li a{
        
         /* background-color: gold; */
         /* height: ; */
-        padding-top: 3em;
-        padding-left: 1em ;
-        font-size: 2.5rem;
+        /* padding-top: 3em; */
+        /* padding-left: 1em ; */
+        font-size: 1rem;
     
     }
     .heroimage{
