--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ li a{
 .hero{
     height: 100vh;
     /* background-image: var(--bg-image-desktop); */
-    background-color: #F2F0F1;
+    background-color: black;
     background-position: center;
     background-repeat: no-repeat    ;
     background-size: cover;
